luxtensor/workspace_check.txt
cargo :     Checking luxtensor-core v0.1.0 (D:\ven
era\cardano\moderntensor\moderntensor\luxtensor\cr
ates\luxtensor-core)
At line:1 char:1
+ cargo check --workspace 2>&1 | Out-File 
".\workspace_check.txt" -Enco ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (     
   Checking lu...luxtensor-core):String) [],     
RemoteException
    + FullyQualifiedErrorId : NativeCommandErro   
 r
 
    Checking luxtensor-storage v0.1.0 (D:\venera\c
ardano\moderntensor\moderntensor\luxtensor\crates\
luxtensor-storage)
    Checking luxtensor-zkvm v0.4.0 (D:\venera\card
ano\moderntensor\moderntensor\luxtensor\crates\lux
tensor-zkvm)
    Checking luxtensor-consensus v0.1.0 (D:\venera
\cardano\moderntensor\moderntensor\luxtensor\crate
s\luxtensor-consensus)
    Checking luxtensor-network v0.1.0 (D:\venera\c
ardano\moderntensor\moderntensor\luxtensor\crates\
luxtensor-network)
crates\luxtensor-indexer\src\graphql.rs:5:26: 
warning: unused import: `Serialize`
warning: `luxtensor-indexer` (lib) generated 1 
warning (run `cargo fix --lib -p 
luxtensor-indexer` to apply 1 suggestion)
    Checking luxtensor-cli v0.1.0 (D:\venera\carda
no\moderntensor\moderntensor\luxtensor\crates\luxt
ensor-cli)
    Checking luxtensor-oracle v0.1.0 (D:\venera\ca
rdano\moderntensor\moderntensor\luxtensor\crates\l
uxtensor-oracle)
    Checking luxtensor-contracts v0.1.0 (D:\venera
\cardano\moderntensor\moderntensor\luxtensor\crate
s\luxtensor-contracts)
    Checking luxtensor-tests v0.1.0 (D:\venera\car
dano\moderntensor\moderntensor\luxtensor\crates\lu
xtensor-tests)
    Checking luxtensor-rpc v0.1.0 (D:\venera\carda
no\moderntensor\moderntensor\luxtensor\crates\luxt
ensor-rpc)
warning: unused import: `Address`
  --> crates\luxtensor-rpc\src\eth_rpc\eth_methods
.rs:12:13
   |
12 | use super::{Address, hex_to_address, 
address_to_hex, hash_to_hex};
   |             ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: `luxtensor-rpc` (lib) generated 1 
warning (run `cargo fix --lib -p luxtensor-rpc` 
to apply 1 suggestion)
    Checking luxtensor-node v0.1.0 (D:\venera\card
ano\moderntensor\moderntensor\luxtensor\crates\lux
tensor-node)
warning: unexpected `cfg` condition value: 
`production-vrf`
   --> crates\luxtensor-node\src\service.rs:510:31
    |
510 |                         #[cfg(feature = 
"production-vrf")]
    |                               
^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: expected values for `feature` are: 
`legacy`
    = help: consider adding `production-vrf` as a 
feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly
/rustc/check-cfg/cargo-specifics.html> for more 
information about checking conditional 
configuration
    = note: `#[warn(unexpected_cfgs)]` on by 
default

warning: unexpected `cfg` condition value: 
`production-vrf`
   --> crates\luxtensor-node\src\block_production.
rs:752:15
    |
752 |         #[cfg(feature = "production-vrf")]
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: expected values for `feature` are: 
`legacy`
    = help: consider adding `production-vrf` as a 
feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly
/rustc/check-cfg/cargo-specifics.html> for more 
information about checking conditional 
configuration

warning: unused import: `parking_lot::RwLock`
  --> crates\luxtensor-node\src\startup.rs:18:5
   |
18 | use parking_lot::RwLock;
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> crates\luxtensor-node\src\startup.rs:727:13
    |
727 |         let mut unified_state_for_blocks: 
Option<
    |             ----^^^^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of 
`#[warn(unused)]`) on by default

error[E0560]: struct 
`luxtensor_consensus::MinerInfo` has no field 
named `has_gpu`
   --> crates\luxtensor-node\src\block_production.
rs:428:25
    |
428 |                         has_gpu: false,
    |                         ^^^^^^^ 
`luxtensor_consensus::MinerInfo` does not have 
this field
    |
    = note: all struct fields are already assigned

error[E0560]: struct 
`luxtensor_consensus::MinerInfo` has no field 
named `has_gpu`
   --> crates\luxtensor-node\src\block_production.
rs:466:63
    |
466 |             vec![MinerInfo { address: 
miner_addr, score: 1.0, has_gpu: false }]
    |                                             
                  ^^^^^^^ 
`luxtensor_consensus::MinerInfo` does not have 
this field
    |
    = note: all struct fields are already assigned

For more information about this error, try `rustc 
--explain E0560`.
warning: `luxtensor-node` (bin "luxtensor-node") 
generated 4 warnings
error: could not compile `luxtensor-node` (bin 
"luxtensor-node") due to 2 previous errors; 4 
warnings emitted
